--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "styleguide:build": "styleguidist build",
     "sync": "node scripts/sync.js",
     "deploy": "npm run sync && npm run build",
+    "postinstall": "node scripts/esmtocjs.js",
     "prepare": "husky install"
   },
   "engines": {
@@ -56,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "dotenv": "^10.0.0",
+    "esbuild": "^0.12.15",
     "eslint": "^7.31.0",
     "eslint-config-tamia": "^7.2.6",
     "eslint-plugin-react": "^7.24.0",
@@ -78,13 +80,17 @@
     "jest": "^27.0.6",
     "lint-staged": "^11.0.1",
     "lodash": "^4.17.21",
+    "mdast-util-from-markdown": "^1.0.0",
+    "mdast-util-to-string": "^3.1.0",
     "prettier": "^2.3.2",
     "react-styleguidist": "12.0.0-alpha9.8",
     "richtypo": "^4.1.1",
     "richtypo-rules-en": "^4.0.7",
     "sucrase": "^3.20.0",
+    "tiny-glob": "^0.2.9",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "unist-util-visit": "^3.1.0"
   },
   "lint-staged": {
     "*.{js,ts,tsx,md}": "prettier --write",
