--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18n-nationality": "^1.1.1",
     "install": "^0.13.0",
     "just-group-by": "^1.1.1",
+    "numeric-quantity": "^1.0.1",
     "param-case": "^3.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -50,24 +51,24 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/mdx-js__react": "^1.5.4",
-    "@types/react": "^17.0.14",
+    "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.2",
     "@types/styled-components": "^5.1.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "dotenv": "^10.0.0",
-    "esbuild": "^0.12.15",
-    "eslint": "^7.31.0",
-    "eslint-config-tamia": "^7.2.6",
+    "esbuild": "^0.12.17",
+    "eslint": "^7.32.0",
+    "eslint-config-tamia": "^7.2.7",
     "eslint-plugin-react": "^7.24.0",
     "fs-extra": "^10.0.0",
-    "gatsby": "^3.10.0",
+    "gatsby": "^3.10.2",
     "gatsby-plugin-canonical-urls": "^3.10.0",
     "gatsby-plugin-feed": "^3.10.0",
     "gatsby-plugin-goatcounter": "^0.4.0",
     "gatsby-plugin-graphql-codegen": "^3.0.0",
-    "gatsby-plugin-image": "1.10.0",
+    "gatsby-plugin-image": "1.10.1",
     "gatsby-plugin-netlify": "^3.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sitemap": "^4.6.0",
@@ -78,7 +79,7 @@
     "glob": "^7.1.7",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
-    "lint-staged": "^11.0.1",
+    "lint-staged": "^11.1.1",
     "lodash": "^4.17.21",
     "mdast-util-from-markdown": "^1.0.0",
     "mdast-util-to-string": "^3.1.0",
@@ -88,9 +89,9 @@
     "richtypo-rules-en": "^4.0.7",
     "sucrase": "^3.20.0",
     "tiny-glob": "^0.2.9",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.3.5",
-    "unist-util-visit": "^3.1.0"
+    "unist-util-visit": "^4.0.0"
   },
   "lint-staged": {
     "*.{js,ts,tsx,md}": "prettier --write",
