--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@graphcms/react-image": "^1.0.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@styled-system/css": "^5.1.5",
     "@tippyjs/react": "^4.2.5",
     "country-code-emoji": "^2.3.0",
     "format-quantity": "^1.0.1",
