--- a/package.json
+++ b/package.json
@@ -39,47 +39,49 @@
     "i18n-nationality": "^1.1.1",
     "install": "^0.13.0",
     "just-group-by": "^1.1.1",
-    "numeric-quantity": "^1.0.1",
+    "numeric-quantity": "^1.0.2",
     "param-case": "^3.0.4",
     "react": "^17.0.2",
+    "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-group": "^3.0.2",
     "react-helmet": "^6.1.0",
     "sentence-case": "^3.0.4",
-    "styled-components": "^5.3.0",
-    "tamia": "^5.11.2",
+    "styled-components": "^5.3.1",
+    "tamia": "^5.11.3",
     "tamia-gatsby-link": "^1.0.6"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/mdx-js__react": "^1.5.4",
-    "@types/react": "^17.0.17",
+    "@types/react": "^17.0.19",
+    "@types/react-collapse": "^5.0.1",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.2",
     "@types/styled-components": "^5.1.12",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "dotenv": "^10.0.0",
-    "esbuild": "^0.12.19",
+    "esbuild": "^0.12.22",
     "eslint": "^7.32.0",
     "eslint-config-tamia": "^7.2.7",
     "eslint-plugin-react": "^7.24.0",
     "fs-extra": "^10.0.0",
-    "gatsby": "^3.11.1",
-    "gatsby-plugin-canonical-urls": "^3.11.0",
-    "gatsby-plugin-feed": "^3.11.0",
+    "gatsby": "^3.12.0",
+    "gatsby-plugin-canonical-urls": "^3.12.0",
+    "gatsby-plugin-feed": "^3.12.0",
     "gatsby-plugin-goatcounter": "^0.4.0",
     "gatsby-plugin-graphql-codegen": "^3.0.0",
-    "gatsby-plugin-image": "1.11.0",
-    "gatsby-plugin-netlify": "^3.11.0",
-    "gatsby-plugin-react-helmet": "^4.11.0",
-    "gatsby-plugin-sitemap": "^4.7.0",
-    "gatsby-plugin-styled-components": "^4.11.0",
+    "gatsby-plugin-image": "1.12.0",
+    "gatsby-plugin-netlify": "^3.12.0",
+    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-sitemap": "^4.8.0",
+    "gatsby-plugin-styled-components": "^4.12.0",
     "gatsby-plugin-ts-config": "^1.1.6",
-    "gatsby-plugin-typescript": "^3.11.0",
+    "gatsby-plugin-typescript": "^3.12.0",
     "gatsby-source-graphcms": "^2.6.0",
     "glob": "^7.1.7",
-    "husky": "^7.0.1",
+    "husky": "^7.0.2",
     "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
     "lodash": "^4.17.21",
@@ -91,7 +93,7 @@
     "richtypo-rules-en": "^4.0.7",
     "sucrase": "^3.20.1",
     "tiny-glob": "^0.2.9",
-    "ts-jest": "^27.0.4",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5",
     "unist-util-visit": "^4.0.0"
   },
