--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "i18n-nationality": "^1.1.1",
     "install": "^0.13.0",
     "just-group-by": "^1.1.1",
+    "lunr": "^2.3.9",
     "numeric-quantity": "^1.0.2",
     "param-case": "^3.0.4",
     "react": "^17.0.2",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/lunr": "^2.3.4",
     "@types/mdx-js__react": "^1.5.4",
     "@types/react": "^17.0.21",
     "@types/react-collapse": "^5.0.1",
