Add search field autocomplete

--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@styled-system/css": "^5.1.5",
     "@tippyjs/react": "^4.2.5",
     "country-code-emoji": "^2.3.0",
+    "downshift": "^6.1.7",
     "format-quantity": "^1.0.1",
     "i18n-nationality": "^1.1.1",
     "install": "^0.13.0",
     "just-group-by": "^1.1.1",
     "lunr": "^2.3.9",
+    "match-sorter": "^6.3.1",
     "numeric-quantity": "^1.0.2",
     "param-case": "^3.0.4",
     "react": "^17.0.2",
