--- a/package.json
+++ b/package.json
@@ -27,40 +27,41 @@
     "not dead"
   ],
   "dependencies": {
-    "@graphcms/react-image": "^1.0.1",
+    "@graphcms/react-image": "^1.1.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@styled-system/css": "^5.1.5",
-    "@tippyjs/react": "^4.2.5",
+    "@tippyjs/react": "^4.2.6",
     "country-code-emoji": "^2.3.0",
     "downshift": "^6.1.7",
-    "format-quantity": "^1.0.1",
-    "i18n-nationality": "^1.1.1",
+    "format-quantity": "^1.1.0",
+    "i18n-nationality": "^1.2.0",
     "install": "^0.13.0",
     "just-group-by": "^1.1.1",
     "lunr": "^2.3.9",
     "match-sorter": "^6.3.1",
-    "numeric-quantity": "^1.0.2",
+    "numeric-quantity": "^1.0.4",
     "param-case": "^3.0.4",
     "react": "^17.0.2",
-    "react-collapse": "^5.1.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^17.0.2",
     "react-group": "^3.0.2",
     "react-helmet": "^6.1.0",
     "sentence-case": "^3.0.4",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.5",
     "tamia": "^5.11.4",
     "tamia-gatsby-link": "^1.0.6"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/lunr": "^2.3.4",
-    "@types/mdx-js__react": "^1.5.4",
+    "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.21",
     "@types/react-collapse": "^5.0.1",
     "@types/react-dom": "^17.0.9",
-    "@types/react-helmet": "^6.1.2",
-    "@types/styled-components": "^5.1.14",
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.25",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "dotenv": "^10.0.0",
@@ -68,34 +69,34 @@
     "eslint": "^7.32.0",
     "eslint-config-tamia": "^7.2.7",
     "eslint-plugin-react": "^7.25.2",
-    "fs-extra": "^10.0.0",
-    "gatsby": "^4.11.2",
-    "gatsby-plugin-canonical-urls": "^4.11.0",
-    "gatsby-plugin-feed": "^4.11.1",
+    "fs-extra": "^10.1.0",
+    "gatsby": "^4.20.0",
+    "gatsby-plugin-canonical-urls": "^4.20.0",
+    "gatsby-plugin-feed": "^4.20.0",
     "gatsby-plugin-goatcounter": "^0.4.0",
     "gatsby-plugin-graphql-codegen": "^3.1.1",
-    "gatsby-plugin-image": "2.11.1",
-    "gatsby-plugin-netlify": "^4.2.0",
-    "gatsby-plugin-react-helmet": "^5.11.0",
-    "gatsby-plugin-sitemap": "^5.11.1",
-    "gatsby-plugin-styled-components": "^5.11.0",
+    "gatsby-plugin-image": "2.20.0",
+    "gatsby-plugin-netlify": "^5.0.1",
+    "gatsby-plugin-react-helmet": "^5.20.0",
+    "gatsby-plugin-sitemap": "^5.20.0",
+    "gatsby-plugin-styled-components": "^5.20.0",
     "gatsby-source-graphcms": "^2.8.0",
     "glob": "^7.1.7",
     "husky": "^7.0.2",
     "jest": "^27.2.0",
     "lint-staged": "^11.1.2",
     "lodash": "^4.17.21",
-    "mdast-util-from-markdown": "^1.0.0",
+    "mdast-util-from-markdown": "^1.2.0",
     "mdast-util-to-string": "^3.1.0",
     "prettier": "^2.4.1",
     "react-styleguidist": "12.0.0-alpha9.8",
-    "richtypo": "^4.1.7",
-    "richtypo-rules-en": "^4.0.13",
+    "richtypo": "^4.1.12",
+    "richtypo-rules-en": "^4.0.18",
     "sucrase": "^3.20.1",
     "tiny-glob": "^0.2.9",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3",
-    "unist-util-visit": "^4.0.0"
+    "unist-util-visit": "^4.1.0"
   },
   "lint-staged": {
     "*.{js,ts,tsx,md}": "prettier --write",
