chore: Update deps 🍕

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,10 @@
 		"resolveJsonModule": true,
 		"baseUrl": "src"
 	},
-	"include": ["./src/**/*", "./gatsby-*", "./src/gatsby-types.d.ts"]
+	"include": [
+		"./src/**/*",
+		"./gatsby-*",
+		"./src/gatsby-types.d.ts",
+		"./src/styled.d.ts"
+	]
 }
