--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@mdx-js/react": "^1.6.22",
     "@styled-system/css": "^5.1.5",
     "@tippyjs/react": "^4.2.6",
-    "downshift": "^6.1.7",
+    "downshift": "^6.1.9",
     "format-quantity": "^1.1.0",
     "install": "^0.13.0",
     "lunr": "^2.3.9",
@@ -45,25 +45,25 @@
     "react-group": "^3.0.2",
     "sentence-case": "^3.0.4",
     "styled-components": "^5.3.5",
-    "tamia": "^5.11.4",
+    "tamia": "^5.12.2",
     "tamia-gatsby-link": "^1.0.6"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^29.0.0",
     "@types/lunr": "^2.3.4",
     "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.21",
     "@types/react-collapse": "^5.0.1",
     "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.25",
+    "@types/styled-components": "5.1.25",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "dotenv": "^10.0.0",
-    "esbuild": "^0.12.28",
-    "eslint": "^7.32.0",
-    "eslint-config-tamia": "^7.2.7",
-    "eslint-plugin-react": "^7.25.2",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "dotenv": "^16.0.2",
+    "esbuild": "^0.15.7",
+    "eslint": "^8.23.0",
+    "eslint-config-tamia": "^8.0.1",
+    "eslint-plugin-react": "^7.31.6",
     "fs-extra": "^10.1.0",
     "gatsby": "^4.20.0",
     "gatsby-plugin-canonical-urls": "^4.20.0",
@@ -74,22 +74,22 @@
     "gatsby-plugin-sitemap": "^5.20.0",
     "gatsby-plugin-styled-components": "^5.20.0",
     "gatsby-source-graphcms": "^2.8.0",
-    "glob": "^7.1.7",
-    "husky": "^7.0.2",
-    "jest": "^27.2.0",
-    "lint-staged": "^11.1.2",
+    "glob": "^8.0.3",
+    "husky": "^8.0.1",
+    "jest": "^29.0.2",
+    "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
     "mdast-util-from-markdown": "^1.2.0",
     "mdast-util-to-string": "^3.1.0",
-    "prettier": "^2.4.1",
-    "react-styleguidist": "12.0.0-alpha9.8",
+    "prettier": "^2.7.1",
+    "react-styleguidist": "12.0.0",
     "richtypo": "^4.1.12",
     "richtypo-rules-en": "^4.0.18",
-    "sucrase": "^3.20.1",
+    "sucrase": "^3.25.0",
     "tiny-glob": "^0.2.9",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.7.4",
-    "unist-util-visit": "^4.1.0"
+    "ts-jest": "^28.0.8",
+    "typescript": "4.7.4",
+    "unist-util-visit": "^4.1.1"
   },
   "lint-staged": {
     "*.{js,ts,tsx,md}": "prettier --write",
