--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "react-dom": "^17.0.2",
     "react-group": "^3.0.2",
     "sentence-case": "^3.0.4",
-    "styled-components": "^5.3.5",
-    "tamia": "^6.0.20",
+    "styled-components": "5.3.6",
+    "tamia": "^6.0.21",
     "tamia-gatsby-link": "^1.0.6"
   },
   "devDependencies": {
@@ -54,7 +54,7 @@
     "@types/react": "^17.0.21",
     "@types/react-collapse": "^5.0.1",
     "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "5.1.25",
+    "@types/styled-components": "5.1.26",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
