--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "match-sorter": "^6.3.1",
     "numeric-quantity": "^1.0.4",
     "param-case": "^3.0.4",
+    "pretty-ms": "^8.0.0",
     "react": "^17.0.2",
     "react-collapse": "^5.1.1",
     "react-dom": "^17.0.2",
