Upgrade to Gatsby 5
https://www.gatsbyjs.com/docs/reference/release-notes/migrating-from-v4-to-v5/

--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "node": ">=18"
   },
   "browserslist": [
-    ">1%",
-    "last 1 version",
-    "Firefox ESR",
-    "not dead"
+    ">0.25%",
+    "not dead and supports es6-module"
   ],
   "dependencies": {
     "@graphcms/react-image": "^1.1.0",
@@ -39,9 +37,9 @@
     "numeric-quantity": "^1.0.4",
     "param-case": "^3.0.4",
     "parse-ms": "^3.0.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-collapse": "^5.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-group": "^3.0.2",
     "sentence-case": "^3.0.4",
     "styled-components": "5.3.6",
@@ -52,9 +50,9 @@
     "@types/jest": "^29.5.5",
     "@types/lunr": "^2.3.4",
     "@types/mdx-js__react": "^1.5.5",
-    "@types/react": "^17.0.21",
+    "@types/react": "^18.2.25",
     "@types/react-collapse": "^5.0.1",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^18.2.10",
     "@types/styled-components": "5.1.26",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -65,14 +63,14 @@
     "eslint-config-tamia": "^8.1.0",
     "eslint-plugin-react": "^7.33.2",
     "fs-extra": "^10.1.0",
-    "gatsby": "^4.25.7",
-    "gatsby-plugin-canonical-urls": "^4.25.0",
-    "gatsby-plugin-feed": "^4.25.0",
+    "gatsby": "^5.12.5",
+    "gatsby-plugin-canonical-urls": "^5.12.0",
+    "gatsby-plugin-feed": "^5.12.0",
     "gatsby-plugin-goatcounter": "^0.4.0",
-    "gatsby-plugin-image": "2.20.0",
+    "gatsby-plugin-image": "3.12.0",
     "gatsby-plugin-netlify": "^5.1.1",
-    "gatsby-plugin-sitemap": "^5.25.0",
-    "gatsby-plugin-styled-components": "^5.25.0",
+    "gatsby-plugin-sitemap": "^6.12.0",
+    "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-graphcms": "^2.8.0",
     "glob": "^8.0.3",
     "husky": "^8.0.3",
