--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "pretest": "npm run lint",
-    "test": "jest",
+    "test": "vitest run",
     "posttest": "npm run format",
     "typecheck": "tsc",
     "lint": "eslint . --cache --fix --ext .js,.ts,.tsx",
@@ -49,7 +49,7 @@
     "tamia-gatsby-link": "^1.0.6"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.5",
+    "@types/lodash": "^4.14.199",
     "@types/lunr": "^2.3.4",
     "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.21",
@@ -76,7 +76,6 @@
     "gatsby-source-graphcms": "^2.8.0",
     "glob": "^8.0.3",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
     "lodash": "^4.17.21",
     "mdast-util-from-markdown": "^1.2.0",
@@ -87,9 +86,9 @@
     "richtypo-rules-en": "^4.0.18",
     "sucrase": "^3.34.0",
     "tiny-glob": "^0.2.9",
-    "ts-jest": "^29.1.1",
     "typescript": "5.2.2",
     "unist-util-visit": "^4.1.1"
+    "vitest": "^0.34.6"
   },
   "lint-staged": {
     "*.{js,ts,tsx,md}": "prettier --write",
