Don't run astro check on CI
It requires content files

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,4 +16,4 @@ jobs:
           node-version-file: .nvmrc
           cache: 'npm'
       - run: npm ci
-      - run: npm test
+      - run: npm run test:ci
