--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "eslint . --cache --fix --ext .js,.ts,.tsx,.astro",
     "format": "prettier --log-level warn --write \"**/*.{js,ts,tsx,astro,md}\"",
     "prepare": "husky install",
-    "sync": "tsx -r dotenv/config scripts/sync.ts"
+    "sync": "tsx -r dotenv/config scripts/sync.ts",
+    "sync:ci": "tsx -r dotenv/config scripts/syncCi.ts"
   },
   "type": "module",
   "engines": {
