--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,4 +18,5 @@ jobs:
       - run: npm ci
       - run: npx playwright install --with-deps
       - run: npm run sync:ci
+      - run: npm run build
       - run: npm run test:ci
