Decouple sync and build
Because Netlify deploy also uses `build` and now runs CI sync.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,5 +17,6 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npx playwright install --with-deps
+      - run: npm run sync:ci
       - run: npm run build
       - run: npm run test:ci
