Add missing Astro build to the test step

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "astro build",
     "preview": "astro preview",
     "pretest": "npm run lint",
-    "test": "astro check && vitest run && npx playwright test",
+    "test": "astro check && vitest run && astro build && npx playwright test",
     "test:watch": "vitest watch",
-    "test:ci": "npm run lint && vitest run && npx playwright test",
+    "test:ci": "npm run lint && vitest run && astro build && npx playwright test",
     "test:e2e": "npx playwright test --ui",
     "posttest": "npm run format",
     "lint": "eslint . --cache --fix --ext .js,.ts,.tsx,.astro",
