Update ESLint to v9

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,11 @@
     "Aeropress",
     "Baratza",
     "Chemex",
+    "glutens",
     "mdast",
     "subrecipe",
-    "subrecipes"
+    "subrecipes",
+    "tacohuaco",
+    "unitless"
   ]
 }
