--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "lib": ["ESNext"],
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "strictNullChecks": true,
     "verbatimModuleSyntax": true
   },
-  "include": ["src/"]
+  "include": ["src/", "scripts/"]
 }
