Fix tests and lint

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "pretest": "npm run lint",
-    "test": "astro check && vitest run && astro build && npx playwright test",
+    "test": "astro check && vitest run",
+    "test:unit": "vitest run",
     "test:watch": "vitest watch",
     "test:ci": "npm run lint && vitest run && astro build && npx playwright test",
     "test:e2e": "npx playwright test --ui",
