--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,12 @@
     "Aeropress",
     "Baratza",
     "Chemex",
+    "garrofó",
     "glutens",
     "mdast",
     "subrecipe",
     "subrecipes",
     "tacohuaco",
     "unitless"
-  ]
+]
 }
