Scale coffee recipes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "Chemex",
     "garrofó",
     "glutens",
+    "Kalita",
     "mdast",
     "Moka",
     "MOUTHES",
@@ -12,5 +13,5 @@
     "subrecipes",
     "tacohuaco",
     "unitless"
-]
+  ]
 }
