Experimental display of cuisines, meals and tags

--- a/package.json
+++ b/package.json
@@ -36,19 +36,18 @@
     "@astrojs/sitemap": "^3.2.1",
     "@pandacss/dev": "^0.47.1",
     "astro": "^5.0.2",
+    "change-case": "^5.4.4",
     "downshift": "^9.0.8",
     "format-quantity": "^3.0.0",
     "lunr": "^2.3.9",
     "markdown-to-jsx": "^7.5.0",
     "match-sorter": "^8.0.0",
     "numeric-quantity": "^2.0.1",
-    "param-case": "^3.0.4",
     "parse-ms": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-group": "^4.0.0",
     "remove-markdown": "^0.5.5",
-    "sentence-case": "^3.0.4",
     "tamia": "^7.1.6"
   },
   "devDependencies": {
