--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "garrofó",
     "glutens",
     "Kalita",
+    "Klatzlandian",
     "mdast",
     "Moka",
     "MOUTHES",
@@ -14,5 +15,5 @@
     "subrecipes",
     "tacohuaco",
     "unitless"
-  ]
+]
 }
