--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "posttest": "npm run format",
     "lint": "eslint . --cache --fix",
     "format": "prettier --log-level warn --write \"**/*.{js,cjs,mjs,ts,tsx,astro,md}\"",
-    "sync": "tsx -r dotenv/config scripts/sync.ts",
-    "sync:ci": "tsx -r dotenv/config scripts/syncCi.ts",
+    "sync": "node --env-file=.env --experimental-strip-types scripts/sync.ts",
+    "sync:ci": "node --env-file=.env --experimental-strip-types scripts/syncCi.ts",
     "prepare": "husky; panda codegen"
   },
   "type": "module",
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "browserslist": [
     ">1%",
@@ -51,7 +51,7 @@
     "tamia": "^7.1.11"
   },
   "devDependencies": {
-    "@playwright/test": "^1.49.0",
+    "@playwright/test": "^1.56.0",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash": "^4.17.20",
     "@types/lunr": "^2.3.7",
@@ -59,27 +59,25 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@types/remove-markdown": "^0.3.4",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.16.0",
-    "eslint-config-tamia": "^9.2.1",
+    "eslint": "^9.37.0",
+    "eslint-config-tamia": "^9.4.3",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "fs-extra": "^11.2.0",
-    "glob": "^11.0.0",
+    "glob": "^11.0.3",
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
+    "lint-staged": "^16.2.4",
     "lodash": "^4.17.21",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-to-markdown": "^2.1.2",
-    "prettier": "^3.4.2",
+    "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "richtypo": "^7.0.1",
-    "tsx": "^4.19.2",
-    "typescript": "5.7.2",
+    "typescript": "5.9.3",
     "unist-util-visit": "^5.0.0",
-    "vitest": "^2.1.8"
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "*.{js,cjs,mjs,ts,tsx,astro,md}": "prettier --write",
